<resources>
    <string name="app_name">Omrati</string>
    <string name="action_settings">LogOut</string>
    <string name="errorapp">\"Error is in application \"</string>
    <string name="title_activity_company_register">Company Register</string>
    <string name="completeaction">Complete action using</string>
    <string name="creat_acount">Creating Account...</string>
    <string name="customer">Customer</string>
    <string name="somewrong">Something went wrong</string>
    <string name="useuproimg">UsersProfileImages</string>
    <string name="profress">Progress</string>
    <string name="onProgress">onProgress: %5.2f MB transferred</string>
    <string name="error_notadd">\"Error : not add \"</string>
    <string name="welcome">Welcome</string>
    <string name="data">data</string>
    <string name="language_ar">Arabic</string>
    <string name="language_en">English</string>
    <string name="Offer_Detail">Offer Detail</string>
    <string name="error_num">Error number seat</string>
    <string name="register">Register</string>
    <string name="fName">First Name</string>
    <string name="offer_expire">Offer Expire</string>
    <string name="confpassword_hint">Confirm Password</string>
    <string name="password_hint">Password</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">User Name</string>
    <string name="location">Location</string>
    <string name="companyname_hint">Company Name</string>
    <string name="mobile_hint">Mobile</string>
    <string name="add_doc_tost_lat">lat, Error Complete Data</string>
    <string name="gps_enable">GPS is Enabled in your device</string>
    <string name="tabed_loc">Taped Location</string>
    <string name="no_permission">No Permissions Granted</string>
    <string name="gps_disable">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="enable_gps">Goto Settings Page To Enable GPS</string>
    <string name="title_activity_company_login">Company Login</string>
    <string name="login_account">Login Account...</string>
    <string name="faild">Failed</string>
    <string name="less6">less than 6</string>
    <string name="pls_wail">Please Wait...</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_pass">Enter password!</string>
    <string name="userin">u are in</string>
    <string name="login">Log In</string>
    <string name="title_activity_company_offers">Company Offers </string>
    <string name="fi" />
    <string name="singleandfamily">Single,Family</string>
    <string name="nodataload">No Data Loaded</string>
    <string name="title_activity_add_offer">Add Offer</string>
    <string name="hotelname_hint">Hotel Name</string>
    <string name="startday">Start Day</string>
    <string name="attend_start_time">Attend Start Time</string>
    <string name="start_time">Start Time</string>
    <string name="back_day">Back Day</string>
    <string name="attend_end_time">Attend End Time</string>
    <string name="end_time">End Time</string>
    <string name="deals_hint">Deals</string>
    <string name="chairs_count_hint">Chairs Count</string>
    <string name="price_hint">Price</string>
    <string name="add_offer">Add Offer</string>
    <string name="tempBooking">Temporary Booking</string>
    <!--//add doctor-->
    <string-array name="sub_level_array">
        <item>First class</item>
        <item>Second Class</item>
        <item>Third Class</item>
    </string-array>
    <string name="bus_level_spinner">Bus Level</string>
    <string name="hotel_level_spinner">Hotel Level</string>
    <string name="choose_multi_imgs">Choose Multi Image</string>
    <string name="return_data">return-data</string>
    <string name="aspc_y">aspectY</string>
    <string name="aspc_x">aspectX</string>
    <string name="Type_Food">Type_Food</string>
    <string name="residence">Type Trip</string>
    <string name="crop">crop</string>
    <string name="image">image/*</string>
    <string name="onfailure">onfailure</string>
    <string name="offer_img">Upload Offer Image ...</string>
    <string name="highprice">High Price</string>
    <string name="lowprice">Low Price</string>
    <string name="dialog">Please Logout from other choice before</string>
    <string name="dialog_offer">No Found Offers in this Data</string>
    <string name="dialogactive">Please Contact this number to Activate your account</string>
    <string name="highrate">High Rate</string>
    <string name="offer_imgs">OfferImgs</string>
    <string name="photos">Photos</string>
    <string name="access">"Allow Omrati \n to access your Loaction and Storage"</string>
    <string name="profile">profile</string>
    <string name="upload_multi_imgs">Upload Multi Image</string>
    <string name="lists">Lists</string>
    <string name="share">حمل تطبيق عمرتي الان واحجز رحلتك في دقائق</string>
    <string name="timestamp">timestamp</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_hotelname">Error Hotel Name</string>
    <string name="error_deals">Error Deals</string>
    <string name="error_price">Error Price</string>
    <string name="error_chairCount">Error Chair Count</string>
    <string name="error_hotelLevel">Error hotel Level</string>
    <string name="error_busLevel">Error TransPortLevel</string>
    <string name="error_profileImg">Error Offer Image</string>
    <string name="title_activity_company_offer_detail">Company Offer Detail</string>
    <string name="your_location">Your Location</string>
    <string name="title_activity_user_login">User Login</string>
    <string name="loading">Loading</string>
    <string name="web_client_id">888906199724-jqmmk6b5opp3r0i11q7h2a6uv1pmq67i.apps.googleusercontent.com</string>
    <string name="Search">Search</string>
    <string name="next">Next</string>
    <string name="Omera_Company_Touries_and_more">Omera Company Touries and more...</string>
    <string name="check_in">check in</string>
    <string name="check_out">check out</string>
    <string name="type_hotel">type hotel</string>
    <string name="type_status">Status</string>
    <string name="Enter_Distination">Enter Distination</string>
    <string name="Enter_Transportation">Enter Transport</string>
    <string name="Transportation">Transport</string>
    <string name="Number_seat">Number seat</string>
    <string name="title_activity_offers">Offers</string>
    <string name="title_activity_offer_detail">Offer Detail</string>
    <string name="font_path">fonts/Raleway-ExtraBold.ttf</string>
    <string name="slogan">Your Offer\'s Here</string>
    <string name="adding_fav">Add to Favorite</string>
    <string name="adding_book">Add to Booking</string>
    <string name="error">error</string>
    <string name="add_fav">Success to Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="add_book">Success to Booking</string>
    <string name="add_phote">Add Photo</string>
    <string name="type_bus">Type bus</string>
    <string name="company_email">Email Company</string>
    <string name="choose_lang">Choose Language</string>
    <string name="go">Go</string>
    <string name="back">Back</string>
    <string name="goback">Go and Back</string>
    <string name="enterdata">Enter Your Data</string>
    <string name="booking">Booking</string>
    <string name="morafiq">Morafiq</string>
    <string name="staying">Place of residence</string>
    <string name="bank">Bank account</string>
    <string name="done">Done</string>
    <string name="pls">Please Choose</string>
    <string name="titleconfirm">Confirm Booking</string>
    <string name="conbook">Permanent reservation</string>
    <string name="tembooking">Temporary booking</string>
    <string name="temabooking">Temporary Booking</string>
    <string name="Copyofreceipt">Copy of receipt</string>
    <string name="enter">Enter data Morafkin</string>
    <string name="enterseat">Enter Number Seat</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send Mail</string>
    <string name="passport">Passport</string>
    <string name="detail">Detail Booking</string>
    <string name="Communicate">Communicate</string>
    <string name="transonly">Residence</string>
    <string name="transonly2">Transport</string>
    <string name="coin">Riyal</string>
    <string name="transonly3">Residence+Transport</string>

    <string-array name="type_transport">
        <item>Go and Back</item>
        <item>Go</item>
        <item>Back</item>
    </string-array>
    <string-array name="types_hotel">

        <item>5 stars</item>
        <item>4 stars</item>
        <item>3 stars</item>
        <item>2 stars</item>
        <item>1 stars</item>
    </string-array>

    <string-array name="type_places">
        <item>Makkah</item>
        <item>Madina</item>
        <item>Makkah,Madina</item>
        <item>Madina,Makkah</item>
    </string-array>


    <string-array name="types_bus">
        <item>after 2017 \n</item>
        <item>2010-2017 \n</item>
        <item>2000-2010 \n</item>
        <item>Before 2000 \n</item>
    </string-array>

    <string name="title_activity_navigation">Navigation Activity</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Reservations">Reservations</string>
    <string name="Favorite_Companies">Favorite Companies</string>
    <string name="Service_Provider">Services</string>
    <string name="Languages">Languages</string>
    <string name="Share_Application">Share Application</string>
    <string name="without_housing">Without housing</string>
    <string name="housing">housing</string>
    <string name="normal">Normal</string>
    <string name="vip">VIp</string>
    <string name="single">Singles</string>
    <string name="families">Families</string>
    <string name="alert">Alert</string>
    <string name="OK">OK</string>
    <string name="net">Check Internet</string>
    <string name="descripe">Description</string>
    <string name="best">Popular destination</string>
    <string name="dialogoffer">You Must choose BackDay after StartDay</string>
    <string name="listbooking">Confirm Booking</string>

    <string name="persondata">Personal Data</string>
    <string name="firstname">FirstName</string>
    <string name="name">Name</string>
    <string name="lastname">LastName</string>
    <string name="addresshint">Address</string>
    <string name="idCard">ID Card/Staying</string>
    <string name="dataMorafiq">Enter data facilities</string>
    <string name="forexample">For Example</string>
    <string name="total">Total Amount for Offer</string>
    <string name="priceplace">Price of Residence</string>
    <string name="pricebus">Price of Transportation</string>
    <string name="pricetotal">Price Total(Residence+Transport)</string>
    <string name="pricetotalchair">Price Total with Number Seat</string>
    <string name="forgetpassword">Forget password?</string>
    <string name="sendPass">The password sent</string>
    <string name="enteremail">Please enter your email</string>
    <string name="companyname">Name Company :</string>
    <string name="FavoriteOffers">Favorite Offers</string>
    <string name="Companies">Companies</string>

</resources>
