<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageViewprofile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/nav_reservations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_assignment_black_24dp"
            android:drawablePadding="@dimen/pad_10dp"
            android:padding="15dp"
            android:text="@string/Reservations"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/nav_Favorite_Companies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_favorite_pry"
            android:drawablePadding="@dimen/pad_10dp"
            android:padding="15dp"
            android:text="@string/Favorite_Companies"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/nav_Service_Provider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_services"
            android:drawablePadding="@dimen/pad_10dp"
            android:padding="15dp"
            android:text="@string/Service_Provider"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/nav_Languages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_manage"
            android:drawablePadding="@dimen/pad_10dp"
            android:padding="15dp"
            android:text="@string/Languages"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/nav_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_share"
            android:drawablePadding="@dimen/pad_10dp"
            android:padding="15dp"
            android:text="@string/Share_Application"
            android:textColor="@android:color/black" />
    </LinearLayout>


</LinearLayout>
