<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/photo"
    android:layoutDirection="ltr"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/editTextLayout"
            style="@style/AuthFieldContainer">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:singleLine="true"
                    android:id="@+id/usernameField"
                    style="@style/AuthEditText"
                    android:imeOptions="actionNext"
                    android:drawableLeft="@drawable/ic_assignment_ind_pry"
                    android:drawablePadding="@dimen/dp8"
                    android:hint="@string/companyname_hint"></EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:singleLine="true"
                    android:id="@+id/emailField"
                    style="@style/AuthEditText"
                    android:imeOptions="actionNext"
                    android:drawableLeft="@drawable/ic_email_pry"
                    android:drawablePadding="@dimen/dp8"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"></EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:singleLine="true"
                    android:id="@+id/phoneField"
                    style="@style/AuthEditText"
                    android:drawableLeft="@drawable/ic_call_pry"
                    android:drawablePadding="@dimen/dp8"
                    android:hint="@string/phone_hint"
                    android:imeOptions="actionNext"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:singleLine="true"
                    android:id="@+id/mobileField"
                    style="@style/AuthEditText"
                    android:drawableLeft="@drawable/ic_phone_iphone_black_24dp"
                    android:drawablePadding="@dimen/dp8"
                    android:hint="@string/mobile_hint"
                    android:imeOptions="actionNext"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/passwordField"
                    style="@style/AuthEditText"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/ic_vpn_key_pry"
                    android:drawablePadding="@dimen/dp8"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confpasswordField"
                    style="@style/AuthEditText"
                    android:drawableLeft="@drawable/ic_vpn_key_pry"
                    android:drawablePadding="@dimen/dp8"
                    android:hint="@string/confpassword_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/bankField"
                    style="@style/AuthEditText"
                    android:drawableLeft="@drawable/ic_account_balance_black_24dp"
                    android:drawablePadding="@dimen/dp8"
                    android:hint="@string/bank"
                    android:imeOptions="actionDone"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_profile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_add_a_photo_pry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_phote" />
            </LinearLayout>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLocation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/editTextLayout"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="26dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:background="@drawable/button_style2"
                android:padding="@dimen/padding_8"
                android:text="@string/location"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp18" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/editTextLayout"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:background="@drawable/button_style"
            android:padding="@dimen/padding_8"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18" />

    </RelativeLayout>
</ScrollView>