<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:layoutDirection="ltr"
    tools:context=".activities.ConfirmBooking">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/barConfirm"
            layout="@layout/app_bar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/bank"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/banknum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/pad_10dp"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/sp18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/Copyofreceipt"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/getimg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_add_circle_black_24dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forexample"
            android:paddingLeft="15dp"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageView
            android:background="@drawable/button_style2"
            android:id="@+id/putimg"
            android:layout_width="250dp"
            android:src="@drawable/banky"
            android:scaleType="fitXY"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp20" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnconfirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/dp20"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_style"
            android:text="@string/conbook"
            android:textColor="@color/white"
            android:textSize="@dimen/sp18" />
    </LinearLayout>
</ScrollView>