<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="6dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        app:cardElevation="10dp"
        card_view:cardCornerRadius="5dp">


        <LinearLayout
            android:id="@+id/linearVisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/delete_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/deletebutton"
                android:text="Delete"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/dispaly_nameUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/pad_10dp"
                    android:paddingRight="@dimen/pad_10dp"
                    android:paddingTop="@dimen/pad_10dp"
                    android:text="@string/email_hint"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/pad_10dp"
                    android:paddingRight="@dimen/pad_10dp"
                    android:paddingTop="@dimen/pad_10dp"
                    android:text="@string/phone_hint"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/pad_10dp"
                    android:paddingRight="@dimen/pad_10dp"
                    android:paddingTop="@dimen/pad_10dp"
                    android:text="@string/timestamp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>